<resources>
    <string name="app_name">ProTGT</string>
    <string-array name="paises">
        <item>España</item>
        <item>Reino Unido</item>
        <item>Francia</item>
        <item>Italia</item>
        <item>Grecia</item>
    </string-array>

    <string-array name="codigopais">
        <item>ESP</item>
        <item>UK</item>
        <item>FRA</item>
        <item>ITA</item>
        <item>GRE</item>
    </string-array>


    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>

    <string name="address_found">Address found</string>

    <string name="msg">Por favor activa todos los permisos</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_datos_personales">Datos Personales</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_contacto">Contactos de confianza</string>
    

    <!-- Domicilio -->
    <string name="pref_domicilio">Domicilio</string>

    
    <!-- Contactos Activity -->
    <string name="fallo_creando_user">Fallo crítico creando user</string>
    <string name="tv_mensaje_contacto">Seleccione un contacto haciendo click en el icono</string>



    <!-- Domicilio Activity y XML-->
    <string name="error_provincia">Introduce la provincia por favor</string>
    <string name="error_localidad">Introduce la localidad por favor</string>
    <string name="error_calle">Introduce la calle por favor</string>
    <string name="error_numero">Introduce el número por favor</string>
    <string name="et_provincia">Provincia *</string>
    <string name="et_localidad">Localidad *</string>
    <string name="et_calle">Calle *</string>
    <string name="et_numero">Número *</string>
    <string name="et_piso">Piso</string>
    <string name="et_bloque">Bloque</string>
    <string name="et_puerta">Puerta</string>


    <!-- Editar Contacto Activity -->
    <string name="tv_aviso">Seleccione un contacto haciendo click en el icono para elegir uno nuevo</string>
    <string name="tv_contacto">Contacto</string>
    <string name="tv_telefono_contacto">Número de teléfono</string>



    <!-- Home Activity y XML-->
    <string name="aviso_localizacion">Active la ubicación o deslize para actualizar</string>
    <string name="tv_tuLocalizacion">Tu localización</string>


    <!-- Login Activity y XML-->
    <string name="error_email_login">Introduce el email por favor</string>
    <string name="error_password_login">Introduce la contraseña por favor</string>
    <string name="email_password_incorrecto">Email o contraseña incorrectos</string>
    <string name="et_email_login"> Email</string>
    <string name="et_password_login"> Contraseña</string>
    <string name="registro">¿No tienes cuenta? Registrate</string>


    <!-- MensajeScreen Activity y XML-->
    <string name="error_codigo_sms">Código incorrecto</string>
    <string name="aviso">ProTGT te enviará un mensaje para verificar tu número. Introduce el codigo de 4 cifras como aparece en el ejemplo</string>
    <string name="et_codigo_sms">Ej: 1234</string>


    <!-- Registro Activity y XML-->
    <string name="error_nombre">Introduce el nombre por favor</string>
    <string name="error_apellidos">Introduce los apellidos por favor</string>
    <string name="error_email_registro">Introduce el correo por favor</string>
    <string name="error_password_registro">Introduce la contraseña por favor</string>
    <string name="error_passwords_repetidas">Las contraseñas no coinciden</string>
    <string name="error_email_registrado">Email ya registrado</string>
    <string name="et_nombre_registro">Nombre</string>
    <string name="et_apellidos_registro">Apellidos</string>
    <string name="et_email_registro">Email</string>
    <string name="et_password_registro">Contraseña</string>
    <string name="et_password_repetido_registro">Repetir Contraseña</string>

    <!-- Telefono Activity y XML -->
    <string name="error_telefono">Introduce su teléfono por favor</string>
    <string name="error_telefono_registrado">Teléfono ya registrado</string>
    <string name="et_telefono">Teléfono</string>

    <!-- Dialogo Cancelacion -->
    <string name="key">SEGURIDAD</string>
    <string name="mensaje_dialog_cancelacion">Escriba SEGURIDAD si desea desactivar la emergencia</string>
    <string name="titulo_dialog_cancelacion">Desactivar emergencia</string>
    <string name="emergencia_desactivada">Emergencia desactivada</string>
    <string name="error_palabra_incorrecta">Palabra clave incorrecta</string>

    <!-- Dialogo Confirmacion -->
    <string name="mensaje_dialog_confirmacion">¿Estás seguro/a que es una alerta?</string>
    <string name="titulo_dialog_confirmacion">Confirmación de alerta</string>
    <string name="emergencia_activada">Emergencia activada</string>

    <!-- Dialogo logout -->
    <string name="mensaje_dialog_logout">¿Estás seguro/a que quieres cerrar sesión?</string>
    <string name="titulo_dialog_logout">Cerrar Sesión</string>

    <!-- Dialog Cancel -->
    <string name="palabra_clave">Palabra clave</string>


    <!-- BOTONES -->
    <string name="bt_continuar">Continuar</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="bt_iniciar_sesion">Iniciar Sesión</string>
    <string name="boton_dialog_cancelar">Cancelar</string>
    <string name="boton_dialog_aceptar">Aceptar</string>
    <string name="bt_finalizar">Finalizar</string>


    <string name="pref_ringtone_silent">Silent</string>

    <!-- Settings pref datos personales -->
    <string name="etp_nombre">Nombre</string>
    <string name="etp_apellidos">Apellidos</string>
    <string name="etp_email">Email</string>
    <string name="etp_password">Contraseña</string>
    <string name="etp_telefono">Teléfono</string>
    <string name="etp_pais">Pais</string>

    <!-- Settings pref contactos -->
    <string name="editar_contacto">Editar contacto</string>

    <!-- Settings pref domicilio -->
    <string name="etp_provincia">Provincia</string>
    <string name="etp_localidad">Localidad</string>
    <string name="etp_calle">Calle</string>
    <string name="etp_numero">Número</string>
    <string name="etp_piso">Piso</string>
    <string name="etp_bloque">Bloque</string>
    <string name="etp_puerta">Puerta</string>


    <!-- MENSAJE SMS DE EMERGENCIA -->
    <string name="emergencia">¡¡EMERGENCIA!! </string>
    <string name="continuacion_emergencia"> se encuentra en peligro.</string>
    <string name="continuacion_emergencia2">Para ver su última ubicación pulse aquí</string>


    <!-- Dialog de inicio de sesion -->
    <string name="inicio_sesion">Iniciando sesión</string>
    <string name="cargando">Cargando.....</string>

    <!-- Dialogo de registro -->
    <string name="registrando">Registrando</string>

    <!-- Diálogo de SMS de verificación -->
    <string name="verificacion">Código de verificación:</string>
    <string name="error_tamanyo_telefono">Introduzca nueve dígitos</string>


</resources>
