<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.joandma.protgt.Activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_man_user_blue"
        android:title="@string/pref_datos_personales" />

    <header
        android:fragment="com.joandma.protgt.Activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/pref_domicilio" />

    <header
        android:fragment="com.joandma.protgt.Activities.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_phone_book"
        android:title="@string/pref_contacto" />

</preference-headers>
