<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="64dp"
    android:paddingStart="64dp"
    tools:context="com.joandma.protgt.Activities.EditContactoActivity">

    <TextView
        android:id="@+id/textViewAviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tv_aviso"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/ivElegirContacto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/buttonEditarContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/boton_cambio_color"
        android:text="@string/bt_aceptar"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivElegirContacto" />

    <ImageView
        android:id="@+id/ivElegirContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditarContacto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAviso"
        app:srcCompat="@drawable/ic_usercontact_black" />

    <TextView
        android:id="@+id/tvNombreContactoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/tv_contacto"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvTelefonoContactoEdit"
        app:layout_constraintStart_toEndOf="@+id/ivElegirContacto"
        app:layout_constraintTop_toTopOf="@+id/ivElegirContacto"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTelefonoContactoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tv_telefono_contacto"
        android:textColor="@android:color/darker_gray"
        android:textSize="15dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditarContacto"
        app:layout_constraintStart_toEndOf="@+id/ivElegirContacto"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreContactoEdit" />

</android.support.constraint.ConstraintLayout>
